<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsFragment">


    <View
        android:id="@+id/bottom"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="#4CAF50"
        android:backgroundTint="#4CAF50"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"></View>

    <LinearLayout
        android:id="@+id/glowna"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@+id/menu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/bottom">

        <ImageButton
            android:id="@+id/glownaButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="false"
            android:backgroundTint="#004CAF50"
            android:contentDescription="@string/glownaButtonText"
            android:src="@android:drawable/sym_action_chat"
            app:tint="@color/black" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/menu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@+id/settings"
        app:layout_constraintStart_toEndOf="@+id/glowna"
        app:layout_constraintTop_toTopOf="@+id/bottom">

        <ImageButton
            android:id="@+id/menuButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="false"
            android:backgroundTint="#004CAF50"
            android:contentDescription="@string/menuButtonText"
            android:src="@android:drawable/ic_dialog_dialer"
            app:tint="@color/black" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/settings"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@+id/bottom"
        app:layout_constraintStart_toEndOf="@+id/menu"
        app:layout_constraintTop_toTopOf="@+id/bottom">

        <ImageButton
            android:id="@+id/kontoButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="false"
            android:backgroundTint="#004CAF50"
            android:contentDescription="@string/kontoButtonText"
            android:src="@android:drawable/sym_action_email"
            app:tint="@color/black" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>