<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="25dp"
        android:adjustViewBounds="true"
        android:src="@drawable/img_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="30dp"
        android:adjustViewBounds="true"
        android:src="@android:drawable/btn_star"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_margin="30dp"
        android:alpha="0.9"
        android:background="@drawable/rounded_edittext_states"
        android:drawableLeft="@android:drawable/ic_menu_search"
        android:drawablePadding="17dp"
        android:ems="100"
        android:hint="Szukaj"
        android:inputType="text"
        android:padding="13dp"
        android:textColorHint="#82858A"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/tytul"
        tools:layout_editor_absoluteX="30dp" />


    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fillViewport="true"
        app:layout_constraintTop_toBottomOf="@+id/search"
        tools:layout_editor_absoluteX="-16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button"
                android:layout_width="172dp"
                android:layout_height="101dp"
                android:layout_marginStart="16dp"
                android:background="@drawable/button_states"
                android:text="All"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="17sp"
                app:layout_constraintEnd_toStartOf="@+id/button2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button2"
                android:layout_width="172dp"
                android:layout_height="101dp"
                android:background="@drawable/button_states"
                android:outlineAmbientShadowColor="#4CAF50"
                android:text="New"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="17sp"
                app:layout_constraintEnd_toStartOf="@+id/button3"
                app:layout_constraintStart_toEndOf="@+id/button"
                app:layout_constraintTop_toTopOf="@+id/button" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button3"
                android:layout_width="172dp"
                android:layout_height="101dp"
                android:background="@drawable/button_states"
                android:text="Category"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="17sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/button2"
                app:layout_constraintTop_toTopOf="@+id/button" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </HorizontalScrollView>

    <View
        android:id="@+id/bottom"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="#4CAF50"
        android:backgroundTint="#4CAF50"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"></View>

    <LinearLayout
        android:id="@+id/glowna"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@+id/menu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/bottom">

        <ImageButton
            android:id="@+id/glownaButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="false"
            android:backgroundTint="#004CAF50"
            android:contentDescription="@string/glownaButtonText"
            android:src="@android:drawable/sym_action_chat"
            app:tint="@color/black" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/menu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@+id/settings"
        app:layout_constraintStart_toEndOf="@+id/glowna"
        app:layout_constraintTop_toTopOf="@+id/bottom">

        <ImageButton
            android:id="@+id/menuButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="false"
            android:backgroundTint="#004CAF50"
            android:contentDescription="@string/menuButtonText"
            android:src="@android:drawable/ic_dialog_dialer"
            app:tint="@color/black" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/settings"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@+id/bottom"
        app:layout_constraintStart_toEndOf="@+id/menu"
        app:layout_constraintTop_toTopOf="@+id/bottom">

        <ImageButton
            android:id="@+id/kontoButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="false"
            android:backgroundTint="#004CAF50"
            android:contentDescription="@string/kontoButtonText"
            android:src="@android:drawable/sym_action_email"
            app:tint="@color/black" />

    </LinearLayout>

    <TextView
        android:id="@+id/tytul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Restauracja"
        tools:layout_editor_absoluteX="168dp"
        tools:layout_editor_absoluteY="38dp" />

</androidx.constraintlayout.widget.ConstraintLayout>